Fix: The page numbers at the bottom of the front-end ticket list were being wrapped unnecessarily Tweak: The privacy popup css was being loaded separately while also being loaded with the minimized css files.

--- a/assets/public/css/component_privacy-popup.css
+++ b/assets/public/css/component_privacy-popup.css
@@ -47,10 +47,6 @@
 	}
 }
 
-.active {
-	display: block !important;
-}
-
 .wpas-gdpr-tab {
 	margin-top: 2em;
     overflow: hidden;
